# makros

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CNAME  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  contributing.html  contributing.rst  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  reference.html  requirements.txt  search.html  searchindex.js  usage.html  usage.rst
docs/_ext/: makrotest.py
docs/_sources/: index.rst.txt  reference.rst.txt
docs/contributing/: basics.html  basics.rst
docs/reference/: makros.MakroParser.html  makros.Makros.html  makros.macro_creation.MacroParser.html  makros.macro_creation.MacroTranslator.html  makros.macro_creation.TokenCase.html  makros.macro_creation.Tokens.html  makros.macro_creation.pyx.html  makros.translate_file.html  makros.translate_folder.html
docs/reference_index/: macro_creation.html  makros.html
docs/usage/: 001_getting_started.html  001_getting_started.rst  002_using_the_enum_macro.html  002_using_the_enum_macro.rst  003_using_the_namespace_macro.html  003_using_the_namespace_macro.rst  004_writing_custom_local_macros.html  004_writing_custom_local_macros.rst  getting_started.rst
examples/001_running_a_file/: README.md  hello.mpy
examples/002_using_the_enum_macro/: README.md  enum.mpy
makros/: __init__.py  cli.py  functions.py  lib.py  macro_creation.py  macros.json  makros.py  parser.py  tokens.py  utils.py
makros/macros/: enum.ebnf  enum.py  (+6 more)
src/: cli.py  lib.py  tokens.py  utils.py
tests/: __init__.mpy  __main__.mpy  __main__.py  enum.mpy  macroImp.mpy  macroImp.py  namespace.mpy
(+58 files in other folders)
