[tool.poetry]
name = "python-macros"
version = "0.1.0"
description = "Modify and extend the Python language with (relative) ease"
authors = ["trickypr <trickypr@icloud.com>"]
license = "GPL-v3.0"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.4.1"
more-itertools = "^8.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
