[tool.poetry]
name = "makros"
version = "0.1.0"
description = "Modify and extend the Python language with (relative) ease"
authors = ["trickypr <trickypr@icloud.com>"]
license = "GPL-v3.0"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"
Sphinx = "^5.0.2"
furo = "^2022.6.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
