[tool.poetry]
name = "makros"
version = "1.1.0"
description = "Modify and extend the Python language with (relative) ease"
authors = ["trickypr <trickypr@icloud.com>"]
license = "GPL-v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"
Sphinx = "^5.0.2"
furo = "^2022.6.21"
sphinx-basic-ng = "^0.0.1-alpha.12"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
makros = 'makros.cli:cli'
